Experimenting with slab font.  Fixed layout issues and scss import order issues...

--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -11,7 +11,8 @@ $hbackground: $background ) {
   border-radius:              2px;
   font-weight:                400;
   cursor:                     pointer;
-  white-space: nowrap;
+  white-space:                nowrap;
+  font-family:                $sans-serif-font-family;
 
   &:hover {
     transition:               .27s;
