--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -2,6 +2,7 @@
   position:             relative;
   border-bottom:        1px solid rgba( 255, 255, 255, .2 );
   z-index:              100;
+  font-family:          $sans-serif-font-family;
 }
 
 #logo-container {
