--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -2,20 +2,20 @@
   background-color:                       $dark-gray;
   @include light-on-dark;
   color:                                  #ffffff;
-
-  .wrapper {
-    @media screen and (min-width: $grid-min-width ) {
-      height:                               30%;
-      min-width:                            100%;
-    }
-  }
+  padding:                                0;
 
   #location-list {
     display:                              none;
-    margin:                               $base-line-height;
-    @include justify-content( center );
+  }
 
-    @media screen and (min-width: $grid-min-width ) {
+  @media screen and (min-width: $grid-min-width ) {
+    min-height:                             30vh;
+
+    #location-list {
+      @include reset-list;
+      @include justify-content( space-around );
+      @include flex-wrap( nowrap );
+      margin:                             $base-line-height 0;
       display:                            flex;
     }
   }
@@ -23,20 +23,25 @@
   .location.button {
     background-repeat:                    no-repeat;
     background-position:                  $grid-hor-padding / 2 8px;
+    background-size:                      35px 90px;
     padding-left:                         $grid-hor-padding * 2;
+
     line-height:                          $base-line-height * 3;
+
     text-transform:                       uppercase;
     font-weight:                          400;
+    font-size:                          $small-font-size;
+    @include flex( 1 0 6rem );
 
-    @media screen and (min-width: $grid-min-width ) {
-      @include flex( 0 1 20% );
-      min-width:                            11rem;
-      margin:                               $base-line-height $grid-hor-padding;
+    @media screen and (min-width: 60rem) {
+      font-size:                          $base-font-size;
     }
+    margin:                               $base-line-height $grid-hor-padding / 2;
   }
 
   #map {
-    height:                               70%;
+    width:                                100%;
+    height:                               400px;
     min-height:                           $hero-height;
   }
 }
