--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -13,6 +13,8 @@
 
 @mixin reset-list {
   list-style-type:          none;
+  padding:                  0;
+  margin:                   0;
 
   li {
     list-style-type:        none;
